Spanish translation added tobedone by David ? X509Req userinterface removed (it is using the wizard too) mkxcapro.sh: creates the xca.pro file from scratch (xca.pro could be removed) configure enhanced with  error and success messages Keydetaildialog fixed The X509 wizard improved and enhanced Some Templatefunctions added (new template, new Cert from template, right mouse context menu, new request from template, delete template)

--- a/KeyDetail.ui
+++ b/KeyDetail.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>462</width>
+            <width>458</width>
             <height>349</height>
         </rect>
     </property>
@@ -553,7 +553,10 @@
             </property>
             <property stdset="1">
                 <name>alignment</name>
-                <set>WordBreak|AlignVCenter|AlignLeft</set>
+                <set>WordBreak|AlignTop|AlignLeft</set>
+            </property>
+            <property>
+                <name>vAlign</name>
             </property>
             <property>
                 <name>wordwrap</name>
