--- a/NewX509_UI.ui
+++ b/NewX509_UI.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>596</width>
+            <width>592</width>
             <height>520</height>
         </rect>
     </property>
@@ -1573,6 +1573,10 @@ For a SSL servercertificate choose the DNS name of the server as "Common name"</
                                 <hsizetype>7</hsizetype>
                                 <vsizetype>7</vsizetype>
                             </sizepolicy>
+                        </property>
+                        <property stdset="1">
+                            <name>selectionMode</name>
+                            <enum>Multi</enum>
                         </property>
                     </widget>
                     <spacer>
